working on games api

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ PORT=5000
 DB_CONNECTION_STRING=mongodb://localhost:27017/casino
 AUTH_SECRET=#O!@*#)!(@#U!KQJHKJH!@#U!P@(#*!)(@#*))
 COOKIE_AUTH_SECRET=129331298311
+URL=http://localhost:5000/api
