--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "js-base64": "^2.5.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.4",
     "path": "^0.12.7"
